--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fabricator-assemble",
+  "name": "fabricator-assemble-lang",
   "version": "1.1.8",
   "description": "The assembly engine behind Fabricator",
   "main": "index.js",
@@ -15,7 +15,7 @@
   ],
   "author": "Luke Askew",
   "license": "MIT",
-  "repository": "fbrctr/fabricator-assemble",
+  "repository": "hyfn/fabricator-assemble-lang",
   "dependencies": {
     "chalk": "^1.0.0",
     "globby": "^2.0.0",
