--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.8",
   "description": "The assembly engine behind Fabricator",
   "main": "index.js",
+  "private": true,
   "engines": {
     "node": ">=0.10.0",
     "npm": "^2.0.0"
